--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Aquí iria el titulo de la pagina</h1>
     <p>Esto es un parrafo</p>
+    <p>Esto es un segundo parrafo</p>
 </body>
 </html>
